no more splitindexes